--- a/application/index/view/orders_all.html
+++ b/application/index/view/orders_all.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>123</title>
+    <title></title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="__CSS__/iframe.css">
     <link rel="stylesheet" type="text/css" href="__STATIC__/layui/css/layui.css">
@@ -41,7 +41,6 @@
 layui.use(['layer','table'], function(){ 
     var layer = layui.layer;
     var table = layui.table;
-    //初始化
     $.ajax({ 
       url: "../goods/allOrders", 
       type: "GET", 
